worked on profile.php and home page!

--- a/css/nav.css
+++ b/css/nav.css
@@ -343,7 +343,10 @@ label {
   text-align: justify;
   margin-bottom: 40px;
 }
-
+/*Services Section*/
+.services .card:hover{
+  background: goldenrod;
+}
 /* Footer Section */
 .footer-dark {
   padding:50px 0;
