--- a/css/properties.css
+++ b/css/properties.css
@@ -70,6 +70,16 @@ body::-webkit-scrollbar {
   padding: 100px 0;
 }
 
+.padding-right{
+  padding-right: 100px;
+}
+
+/* GIS Mapping Section */
+#map {
+  height: 500px;
+  width: 100%;
+}
+
 /* Footer Section */
 .footer-dark {
   padding:50px 0;
