--- a/php/css/tenant.css
+++ b/php/css/tenant.css
@@ -43,3 +43,9 @@ a.social{
 td.a:hover{
   color: white;
 }
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
