--- a/css/nav.css
+++ b/css/nav.css
@@ -139,10 +139,10 @@ body::-webkit-scrollbar {
 }
 
 /*About Section*/
-.about-img{
-  width: 500px;
-  height: 500px;
-}
+/*.about-img{*/
+/*  width: 500px;*/
+/*  height: 500px;*/
+/*}*/
 .about .btn{
   transition: .5s;
 }
@@ -152,11 +152,11 @@ body::-webkit-scrollbar {
   transition: .5s;
 }
 
-.about .about-item{
+.about .c{
   transition: .5s;
 }
 
-.about .about-item:hover{
+.about .c:hover{
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   transform:translateX(5px);
   transition: .5s;
@@ -559,4 +559,175 @@ label {
   .about-card1{
     padding-bottom: 30px;
   }
+}
+
+.btn-outline{
+  background-color: goldenrod;
+}
+.dropdown-menu .dropdown-item:hover{
+  background-color: black;
+  color: goldenrod;
+}
+
+.about {
+  background: #319ac6;
+  height:800px;
+}
+
+.about h2 {
+  color: #fff;
+  margin: 0 0 30px 0
+}
+
+.about .i {
+  margin-top: 30px
+}
+
+.about .i .c {
+  background: #fff;
+  -webkit-box-shadow: 0 4px 0 #2b86ac;
+  -moz-box-shadow: 0 4px 0 #2b86ac;
+  box-shadow: 0 4px 0 #2b86ac;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 110px
+}
+
+.about .i .c .wrap {
+  position: relative
+}
+
+.about .i .c .wrap img {
+  width: 100%;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease
+}
+
+.about .i .c .wrap .info {
+  padding: 30px 0;
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease
+}
+
+.about .i .c .wrap .info .name {
+  font-size: 2.0rem;
+  font-weight: 700;
+  margin: 0 0 8px 0
+}
+
+.about .i .c .wrap .info .position {
+  margin: 0;
+  font-size: 14px;
+  font-size: 1.4rem;
+  color: #555659
+}
+
+.about .i .c .more {
+  position: absolute;
+  bottom: -100%;
+  width: 100%;
+  -webkit-transition: all .3s ease;
+  -moz-transition: all .3s ease;
+  -ms-transition: all .3s ease;
+  -o-transition: all .3s ease
+}
+
+.about .i .c .more p {
+  margin: 0 18px 30px 18px;
+  line-height: 22px
+}
+
+.about .i .c .more .socials {
+  margin: 0 0 20px 0
+}
+
+.about .i .c .more .socials a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 22px;
+  font-size: 2.2rem;
+  color: #fff;
+  margin: 0 0 0 3px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  text-align: center;
+  -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, .1);
+  -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, .1);
+  box-shadow: 0 3px 0 rgba(0, 0, 0, .1)
+}
+
+.about .i .c .more .socials a:first-child {
+  margin: 0
+}
+
+.about .i .c .more .socials a.facebook {
+  background: #3262b9
+}
+
+.about .i .c .more .socials a.facebook:hover {
+  background: #2d57a5
+}
+
+.about .i .c .more .socials a.twitter {
+  background: #3dd7e5
+}
+
+.about .i .c .more .socials a.twitter:hover {
+  background: #27d2e2
+}
+
+.about .i .c .more .socials a.google-plus {
+  background: #e23535
+}
+
+.about .i .c .more .socials a.google-plus:hover {
+  background: #de2020
+}
+
+.about .i .c .more .socials a.linkedin {
+  background: #069
+}
+
+.about .i .c .more .socials a.linkedin:hover {
+  background: #005580
+}
+
+.about .i .c:hover img {
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  -webkit-opacity: 0;
+  opacity: 0
+}
+
+.about .i .c:hover .info {
+  top: 0
+}
+
+.about .i .c:hover .more {
+  bottom: 0
 }
